Fixed the page's y-axis overflowing problem.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,11 +55,14 @@
     background: #F5F5DC;
 }
 
+
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
+    overscroll-behavior-y: contain;
+    background-color: #F5F5DC!important;
 }
 
 
