--- a/frontend/src/css/MiddleTransition.css
+++ b/frontend/src/css/MiddleTransition.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 .middle-transition {
     font-family: "Roboto Mono", monospace !important;
+    overflow: hidden;
+
 }
 .middle-transition-title {
 
